--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>typeappdev</title>
     <link rel="stylesheet" href="global.css">
+    <!-- build:js output.js -->
     <script data-main="global" src="components/requirejs/require.js"></script>
     <script>
         require.config({
@@ -14,6 +15,10 @@
             }
         });
     </script>
+    <!-- endbuild -->
+    <!-- build:js output.js -->
+    <script src="output.js"></script>
+    <!-- endbuild -->
 </head>
 <body>
 <p>Fouten: (<strong id="count_failures"></strong>)</p>
