Transformed the project into a Yeoman, Bower and Grunt project.

--- a/app/index.html
+++ b/app/index.html
@@ -3,21 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>typeappdev</title>
-    <link rel="stylesheet" href="global.css">
-    <!-- build:js output.js -->
-    <script data-main="global" src="components/requirejs/require.js"></script>
-    <script>
-        require.config({
-            baseUrl:'./',
-            paths: {
-                'jquery': 'components/jquery/jquery',
-                'mout': 'components/mout/src/'
-            }
-        });
-    </script>
-    <!-- endbuild -->
-    <!-- build:js output.js -->
-    <script src="output.js"></script>
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- build:js scripts/main.js -->
+    <script data-main="scripts/main" src="components/requirejs/require.js"></script>
     <!-- endbuild -->
 </head>
 <body>
